@@ -55,6 +55,7 @@
                             </excludes>
                             <argLine>
                                 --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
                             </argLine>
                         </configuration>
                     </plugin>
